// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <InputCheckbox /> renders 1`] = `
<DocumentFragment>
  <input
    class="checkbox checkbox-primary checkbox-md test"
    data-testid="InputCheckbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputCheckbox Input Checkbox Color Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        accent
      </span>
    </label>
    <input
      className="checkbox checkbox-accent checkbox-md"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        error
      </span>
    </label>
    <input
      className="checkbox checkbox-error checkbox-md"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        info
      </span>
    </label>
    <input
      className="checkbox checkbox-info checkbox-md"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        primary
      </span>
    </label>
    <input
      className="checkbox checkbox-primary checkbox-md"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        secondary
      </span>
    </label>
    <input
      className="checkbox checkbox-secondary checkbox-md"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        success
      </span>
    </label>
    <input
      className="checkbox checkbox-success checkbox-md"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        warning
      </span>
    </label>
    <input
      className="checkbox checkbox-warning checkbox-md"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputCheckbox Input Checkbox Example 1`] = `
<input
  className="checkbox checkbox-primary checkbox-md"
  data-testid="InputCheckbox"
  type="checkbox"
/>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputCheckbox Input Checkbox Size Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        lg
      </span>
    </label>
    <input
      className="checkbox checkbox-primary checkbox-lg"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        md
      </span>
    </label>
    <input
      className="checkbox checkbox-primary checkbox-md"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        sm
      </span>
    </label>
    <input
      className="checkbox checkbox-primary checkbox-sm"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        xs
      </span>
    </label>
    <input
      className="checkbox checkbox-primary checkbox-xs"
      data-testid="InputCheckbox"
      type="checkbox"
    />
  </div>,
]
`;
